# openedx-pip-packages

nask_azure_auth/: .gitignore  pyproject.toml
nask_azure_auth/nask_azure_auth/: apps.py  auth_pipeline.py
nask_azure_auth/nask_azure_auth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nask_filters/: .gitignore  pyproject.toml
nask_filters/nask_filters/: apps.py  pipeline.py  signals.py  utils.py
tutor-mycors/: setup.py
tutor-mycors/mycors/: __init__.py
tutor-mycors/tutor_mycors.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
